syntax = "proto3";

package peers_touch.model.social.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/peers-labs/peers-touch/station/frame/touch/model/social;social";

// Timeline
message GetTimelineRequest {
  string user_did = 1;
  int64 before_ts = 2;
  int32 limit = 3;
}

message Post {
  uint64 id = 1;
  string author_did = 2;
  string content = 3;
  repeated string media_urls = 4;
  int64 like_count = 5;
  int64 repost_count = 6;
  int64 comment_count = 7;
  bool liked_by_me = 8;
  bool reposted_by_me = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message GetTimelineResponse {
  repeated Post posts = 1;
  bool has_more = 2;
}

// Post operations
message CreatePostRequest {
  string content = 1;
  repeated string media_urls = 2;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  uint64 post_id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  uint64 post_id = 1;
  string content = 2;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  uint64 post_id = 1;
}

message DeletePostResponse {
  bool success = 1;
}

message GetUserPostsRequest {
  string user_did = 1;
  int64 before_ts = 2;
  int32 limit = 3;
}

message GetUserPostsResponse {
  repeated Post posts = 1;
  bool has_more = 2;
}

// Like operations
message LikePostRequest {
  uint64 post_id = 1;
}

message LikePostResponse {
  bool success = 1;
}

message UnlikePostRequest {
  uint64 post_id = 1;
}

message UnlikePostResponse {
  bool success = 1;
}

message GetPostLikersRequest {
  uint64 post_id = 1;
  int32 limit = 2;
}

message UserInfo {
  string did = 1;
  string handle = 2;
  string display_name = 3;
  string avatar_url = 4;
}

message GetPostLikersResponse {
  repeated UserInfo users = 1;
}

// Repost
message RepostPostRequest {
  uint64 post_id = 1;
  string comment = 2;
}

message RepostPostResponse {
  Post repost = 1;
}

// Comments
message GetPostCommentsRequest {
  uint64 post_id = 1;
  int32 limit = 2;
}

message Comment {
  uint64 id = 1;
  uint64 post_id = 2;
  string author_did = 3;
  string content = 4;
  int64 like_count = 5;
  google.protobuf.Timestamp created_at = 6;
}

message GetPostCommentsResponse {
  repeated Comment comments = 1;
  bool has_more = 2;
}

message CreateCommentRequest {
  uint64 post_id = 1;
  string content = 2;
}

message CreateCommentResponse {
  Comment comment = 1;
}

message DeleteCommentRequest {
  uint64 comment_id = 1;
}

message DeleteCommentResponse {
  bool success = 1;
}

// Follow operations
message FollowRequest {
  string target_did = 1;
}

message FollowResponse {
  bool success = 1;
}

message UnfollowRequest {
  string target_did = 1;
}

message UnfollowResponse {
  bool success = 1;
}

message GetFollowersRequest {
  string user_did = 1;
  int32 limit = 2;
  string cursor = 3;
}

message GetFollowersResponse {
  repeated UserInfo users = 1;
  string next_cursor = 2;
}

message GetFollowingRequest {
  string user_did = 1;
  int32 limit = 2;
  string cursor = 3;
}

message GetFollowingResponse {
  repeated UserInfo users = 1;
  string next_cursor = 2;
}

// Relationship
message GetRelationshipRequest {
  string target_did = 1;
}

message Relationship {
  bool following = 1;
  bool followed_by = 2;
  bool blocking = 3;
  bool blocked_by = 4;
  bool muting = 5;
}

message GetRelationshipResponse {
  Relationship relationship = 1;
}

message GetRelationshipsRequest {
  repeated string target_dids = 1;
}

message GetRelationshipsResponse {
  map<string, Relationship> relationships = 1;
}
